fix swager, fix status (200 => 204),
